--- a/styles.css
+++ b/styles.css
@@ -94,13 +94,44 @@ ul li a:hover {
 
 .section__container {
   min-height: 100vh;
-  max-width: var(--max-width);
+  width: 90%;
   margin: auto;
   padding: 1rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 4rem;
+  align-items: center;
 }
+
+.papers {
+    margin-top: 50px;
+    width: 90%;
+    margin: auto;
+  }
+  
+  .papers h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+  }
+  
+  .papers ul {
+    list-style-type: disc;
+    padding-left: 20px;
+  }
+  
+  .papers li {
+    margin-bottom: 20px;
+  }
+  
+  .papers h3 {
+    font-size: 22px;
+    margin: 10px 0;
+  }
+  
+  .papers p {
+    font-size: 18px;
+    line-height: 1.4;
+  }
 
 .content {
   display: flex;
