--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,21 @@ ul li a:hover {
   align-items: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
+/* CV Link Styling */
+.cv-link {
+    display: block;
+    margin-bottom: 20px; /* Space below the CV link */
+    font-size: 18px; /* Adjust font size as needed */
+    color: #007bff; /* Link color */
+    text-decoration: none; /* Remove underline */
+}
+
+.cv-link:hover {
+    text-decoration: underline; /* Add underline on hover */
+}
+
+
+h1, h2 {
     margin-bottom: 30px; /* Adjust the value as needed to increase space below headings */
 }
 
