--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,12 @@ h1, h2 {
   color: var(--text-dark);
   margin-bottom: 1rem;
 }
+nav h1 { 
+  color: white;
+  flex-grow: 20;
+  text-align: left;
+  padding-left: 50px;
+}
 
 .title span {
   font-weight: 600;
@@ -275,7 +281,7 @@ h1, h2 {
 .contact-item a:hover {
     color: #005582;
 }
-
+footer { background-color: #f8f9fa; padding: 10px 0; }
 
 @media screen and (max-width: 768px) {
     nav ul {
@@ -301,4 +307,3 @@ h1, h2 {
 .nav-active {
     display: flex;
 }
-
