--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ nav ul li a:hover {
 }
 
 
-ul {
+nav ul {
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -73,12 +73,11 @@ ul {
   transition: left 0.3s;
 }
 
-ul li a {
+nav ul li a {
   padding: 0.5rem 1rem;
   border: 2px solid transparent;
   text-decoration: none;
   font-weight: 600;
-  color: var(--text-dark);
   transition: 0.3s;
 }
 
@@ -105,6 +104,17 @@ ul li a:hover {
   gap: 4rem;
   align-items: center;
 }
+
+.section__description {
+  font-size: 28px;
+  width: 90%;
+  margin: auto;
+  padding: 1rem;
+  display: grid;
+  gap: 4rem;
+  align-items: center;
+}
+
 
 
 
@@ -198,18 +208,7 @@ nav h1 {
   cursor: pointer;
 }
 
-.hire__me {
-  background-color: var(--primary-color);
-  color: #ffffff;
-}
 
-.hire__me:hover {
-  background-color: var(--primary-color-dark);
-}
-
-.portfolio {
-  color: var(--primary-color);
-}
 
 .portfolio:hover {
   background-color: var(--primary-color-dark);
