--- a/styles.css
+++ b/styles.css
@@ -331,4 +331,72 @@ footer {
     display: flex;
 }
 
+/* Style for the social icons container */
+.social-icons {
+    display: flex;
+    /* aspect-ratio: 1 / 1; */
+    justify-content: center; /* Center the icons */
+    margin: 0px; /* Adds space between image and icons */
+    padding-top: 2px;
+    padding-bottom: 2px;
+    transform: scale(0.85);
+    flex-shrink: 0.5;
+}
 
+.social-icons a {
+    width: 50px;
+    height: auto;
+    aspect-ratio : 1 / 1;
+    margin: 0 0px; /* Space between the icons */
+    /* font-size: 0px; Size of the icons */
+    color: #333; /* Default color */
+    border: 2px solid #5cb6f3;
+    text-align: center;
+    text-decoration: none;
+    color: #000;
+    box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.05);
+    margin: 0 15px;
+    border-radius: 30%;
+    /* position: relative; */
+    position: sticky;
+    overflow: hidden;
+    transition: 0.4s;
+    /* flex-shrink: 0.1; */
+    /* cursor: pointer; */
+}
+
+.social-icons a .fab, .social-icons a .ai, .social-icons a .fas {
+    font-size: 170%;
+    line-height: 50px;
+    position: relative;
+    z-index: 10;
+    transition: color 0.1s;
+}
+
+.social-icons a::after{
+    content: '';
+    width: 100%;
+    /* height: 100%; */
+    aspect-ratio : 1 / 1;
+    top: -90px;
+    /* bottom: 90px; */
+    left: 0;
+    background: linear-gradient(-45deg, #de7b01, #1908ff);
+    position: absolute;
+    transition: 0.2s fade-in-out;
+}
+
+.social-icons a:hover::after {
+    top: 0;
+}
+
+.social-icons a:hover .fab, .social-icons a:hover .ai, .social-icons a:hover .fas {
+    color: #fff;
+}
+
+.social-icons a:hover {
+    /* transform: translateY(10px); */
+    transform: scale(1.3) rotate(360deg);
+    border-radius: 50%;
+    border: 2px solid #000000;
+}
