--- a/styles.css
+++ b/styles.css
@@ -221,8 +221,10 @@ nav h1 {
 }
 
 .image img {
-  width: 100%;
-  border-radius: 100%;
+  display: block;
+  margin: auto;
+  width: 60%;
+  margin-bottom: 30px;
 }
 
 .tab {
